--- a/src/components/Descubre.astro
+++ b/src/components/Descubre.astro
@@ -3,28 +3,20 @@ import Container from "./Container.astro"
 import Topic from "./Topic.astro"
 ---
 <Container>
-
-<div class="w-full p-12 bg-zinc-300 rounded-[45px] justify-start items-start gap-16 inline-flex text-black mb-8">
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-2 divide-x-0 md:divide-x divide-y md:divide-y-0 divide-red">
-    <div class="flex-col items-start gap-5 inline-flex px-2 md:px-6 py-6 md:py-2">
-      <h1 class="text-3xl">Excelencia Académica</h1>
-      <div class="w-full text-lg font-normal">Comprometidos con los más altos estándares académicos, ofrecemos una educación superior impulsada por un profesorado experto.</div>
-    </div>
-    <div class="flex-col items-start gap-5 inline-flex px-2 md:px-6 py-6 md:py-2">
-      <h1 class="text-3xl">Innovación Educativa</h1>
-      <div class="w-full text-lg font-normal">Adoptamos tecnologías y métodos de enseñanza vanguardistas para enriquecer y modernizar el aprendizaje.</div>
-    </div>
-    <div class="flex-col items-start gap-5 inline-flex px-2 md:px-6 py-6 md:py-2">
-      <h1 class="text-3xl">Desarrollo Integral</h1>
-      <div class="w-full text-lg font-normal">Promovemos el crecimiento personal y profesional a través de actividades extracurriculares que cultivan habilidades sociales y liderazgo.</div>
+  <div class="w-full p-12 bg-yellow-200 rounded-[45px] justify-start items-start gap-16 inline-flex text-black mb-8">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-2 divide-x-0 md:divide-x divide-y md:divide-y-0 divide-black">
+      <div class="flex-col items-start gap-5 inline-flex px-2 md:px-6 py-6 md:py-2">
+        <h1 class="text-3xl text-red-700">Excelencia Académica</h1>
+        <div class="w-full text-lg font-normal">Comprometidos con los más altos estándares académicos, ofrecemos una educación superior impulsada por un profesorado experto.</div>
+      </div>
+      <div class="flex-col items-start gap-5 inline-flex px-2 md:px-6 py-6 md:py-2">
+        <h1 class="text-3xl text-red-700">Innovación Educativa</h1>
+        <div class="w-full text-lg font-normal">Adoptamos tecnologías y métodos de enseñanza vanguardistas para enriquecer y modernizar el aprendizaje.</div>
+      </div>
+      <div class="flex-col items-start gap-5 inline-flex px-2 md:px-6 py-6 md:py-2">
+        <h1 class="text-3xl text-red-700">Desarrollo Integral</h1>
+        <div class="w-full text-lg font-normal">Promovemos el crecimiento personal y profesional a través de actividades extracurriculares que cultivan habilidades sociales y liderazgo.</div>
+      </div>
     </div>
   </div>
-</div>
-
-    
-    <!-- <div class="w-[186px] h-[0px] origin-top-left rotate-90 border border-white"></div> -->
-    <!-- <div class="w-[186px] h-[0px] origin-top-left rotate-90 border border-white"></div> -->
-    
-</div>
-
 </Container>
