--- a/src/components/Historia.astro
+++ b/src/components/Historia.astro
@@ -12,12 +12,12 @@ import Topic from "./Topic.astro";
     </div>
 
     <!-- Historia Section -->
-    <div class="bg-zinc-100 p-6 rounded-lg shadow-md text-left mt-32">
+    <div class="bg-yellow-300 p-6 rounded-lg shadow-md text-left mt-32">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div class="md:col-span-1 md:mr-8">
-          <h2 class="text-2xl font-bold text-gray-900">Historia</h2>
+          <h2 class="text-3xl font-bold text-black">Historia</h2>
         </div>
-        <div class="md:col-span-1 text-gray-700">
+        <div class="md:col-span-1 text-gray-900">
           <p>
             Las autoridades de la Comisión Multisectorial del distrito de Ichuña, provincia General Sánchez Cerro del Departamento de Moquegua y el Reverendo Padre de la Parroquia San Ignacio de Loyola Ichuña Lic. Jozef E. VAN DEN OUWELAND con el respaldo y cooperación de las instituciones religiosas del Reino de Bélgica, basándose en un estudio detallado de los aspectos históricos, geográficos, integración vial, economía familiar, crecimiento poblacional y número de centros educativos han emprendido las gestiones pertinentes hasta lograr la creación de un centro superior de estudios: INSTITUTO SUPERIOR TECNOLÓGICO PÚBLICO “ALIANZA ICHUÑA – BÉLGICA” de acuerdo a la Resolución Ministerial Nº: 445-2000 ED de fecha 22 de junio del 2000.
           </p>
