--- a/src/components/Galeria.astro
+++ b/src/components/Galeria.astro
@@ -2,111 +2,100 @@
 import 'photoswipe/style.css';
 import Topic from './Topic.astro';
 ---
-
-<div class="w-full mx-auto bg-gray-200 pt-4 pb-4 mt-10" id="galeria">
+<div class="w-full mx-auto bg-gray-100 pt-4 pb-4 mt-10" id="galeria">
   <div class="w-3/4 mx-auto mt-10">
 
-    <div class="relative flex flex-col items-center mt-16" id="institucional">
-      <Topic title="Galeria" description="">
-      </Topic>
+    <div class="relative flex flex-col items-center mt-16" id="galeria-header">
+      <Topic title="Galería" description="Explora los momentos más destacados de nuestra institución a través de esta galería de imágenes." />
     </div>
-    <div class="relative flex flex-col items-center mb-8" id="institucional">
+
+    <div class="relative flex flex-col items-center mb-8">
       <div class="flex items-center my-4 w-full">
-        <div class="flex-grow border-t border-gray-300"></div>
-        <span class="mx-4 text-gray-500">
+        <div class="flex-grow border-t border-yellow-300"></div>
+        <span class="mx-4 text-yellow-300">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
           </svg>
         </span>
-        <div class="flex-grow border-t border-gray-300"></div>
+        <div class="flex-grow border-t border-yellow-300"></div>
       </div>
-      Bienvenido a nuestra galería educativa. Aquí encontrarás una colección de imágenes que destacan los momentos más significativos de nuestra institución. Desde eventos y ceremonias hasta actividades extracurriculares y logros estudiantiles, esta galería refleja la vitalidad y el compromiso de nuestra comunidad educativa. Haz clic en cualquier imagen para verla en mayor detalle y descubrir más sobre nuestra vida académica y cultural.
-
+      <p class="text-center text-gray-700">
+        Bienvenido a nuestra galería educativa. Aquí encontrarás una colección de imágenes que destacan los momentos más significativos de nuestra institución. Desde eventos y ceremonias hasta actividades extracurriculares y logros estudiantiles, esta galería refleja la vitalidad y el compromiso de nuestra comunidad educativa. Haz clic en cualquier imagen para verla en mayor detalle y descubrir más sobre nuestra vida académica y cultural.
+      </p>
     </div>
 
-
-
-
-
-
-    <div 
-      class="grid min-h-[140px] w-full place-items-center overflow-x-scroll rounded-lg p-6 lg:overflow-visible"
-    >
-    <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-4">
+    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-4">
       <div>
-            <a href="/fotos/foto1.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-                <img src="/fotos/foto1.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-              </a>
-        </div>
-        <div>
-          <a href="/fotos/foto2.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-              <img src="/fotos/foto2.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-            </a>
-      </div>
-      <div>
-        <a href="/fotos/foto3.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-            <img src="/fotos/foto3.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-          </a>
-    </div>
-    <div>
-      <a href="/fotos/foto4.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-          <img src="/fotos/foto4.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
+        <a href="/fotos/foto1.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto1.png" alt="Descripción de la imagen 1" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
         </a>
-  </div>
-  <div>
-    <a href="/fotos/foto5.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-        <img src="/fotos/foto5.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-      </a>
-</div>
-<div>
-  <a href="/fotos/foto6.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-      <img src="/fotos/foto6.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-    </a>
-</div>
-<div>
-  <a href="/fotos/foto7.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-      <img src="/fotos/foto7.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-    </a>
-</div>
-<div>
-  <a href="/fotos/foto8.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-      <img src="/fotos/foto8.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-    </a>
-</div>
-<div>
-  <a href="/fotos/foto9.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-      <img src="/fotos/foto9.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-    </a>
-</div>
-<div>
-  <a href="/fotos/foto10.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-      <img src="/fotos/foto10.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-    </a>
-</div>
-<div>
-  <a href="/fotos/foto11.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-      <img src="/fotos/foto11.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-    </a>
-</div>
-<div>
-  <a href="/fotos/foto12.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank" class="">
-      <img src="/fotos/foto12.png" alt="" class="object-cover object-center h-40 max-w-full rounded-lg md:h-60 hover:-translate-y-2 transition-transform duration-300 ease-in-out">
-    </a>
-</div>
-        
+      </div>
+      <div>
+        <a href="/fotos/foto2.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto2.png" alt="Descripción de la imagen 2" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto3.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto3.png" alt="Descripción de la imagen 3" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto4.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto4.png" alt="Descripción de la imagen 4" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto5.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto5.png" alt="Descripción de la imagen 5" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto6.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto6.png" alt="Descripción de la imagen 6" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto7.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto7.png" alt="Descripción de la imagen 7" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto8.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto8.png" alt="Descripción de la imagen 8" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto9.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto9.png" alt="Descripción de la imagen 9" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto10.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto10.png" alt="Descripción de la imagen 10" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto11.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto11.png" alt="Descripción de la imagen 11" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
+      </div>
+      <div>
+        <a href="/fotos/foto12.png" data-pswp-width="2500" data-pswp-height="1666" target="_blank">
+          <img src="/fotos/foto12.png" alt="Descripción de la imagen 12" class="object-cover object-center h-40 max-w-full rounded-lg hover:scale-105 transition-transform duration-300 ease-in-out"/>
+        </a>
       </div>
     </div>
   </div>
 </div>
-
 
 <script>
-    import PhotoSwipeLightbox from "photoswipe/lightbox"
+  import PhotoSwipeLightbox from "photoswipe/lightbox";
 
-    const lightbox = new PhotoSwipeLightbox({
-      gallery: '#galeria',
-      children: 'a',
-      pswpModule: () => import('photoswipe'),
-    });
-    lightbox.init();
-    </script>
+  const lightbox = new PhotoSwipeLightbox({
+    gallery: '#galeria',
+    children: 'a',
+    pswpModule: () => import('photoswipe'),
+  });
+  lightbox.init();
+</script>
