--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -50,7 +50,7 @@ const links = [
 ];
 ---
 
-<header x-data="{ shrink: false, mobileMenuOpen: false }" @scroll.window="shrink = (window.pageYOffset > 100)" class="fixed top-0 left-0 w-full z-50 bg-zinc-900 text-white shadow-md transition-all duration-500" :class="{ 'py-3': shrink, 'py-8': !shrink }">
+<header x-data="{ shrink: false, mobileMenuOpen: false }" @scroll.window="shrink = (window.pageYOffset > 100)" class="fixed top-0 left-0 w-full z-50 bg-white text-black shadow-md transition-all duration-500" :class="{ 'py-3': shrink, 'py-8': !shrink }">
   <nav class="container mx-auto flex justify-between items-center">
     <a href="/" @click.prevent="location.href = '/'">
       <img src="/./logo_-removebg-preview.png" alt="Logo" class="h-10 transition-transform duration-500 transform ease-in-out" :class="shrink ? 'scale-100' : 'scale-150'" />
@@ -58,7 +58,7 @@ const links = [
     <div class="hidden space-x-4 md:flex">
       {links.map(link => (
         <div x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false" class="relative">
-          <a :class="open ? 'bg-red text-black' : 'text-black'" href={link.url} class="py-2 px-4 hover:text-white hover:bg-red rounded focus:outline-none transition-colors duration-300">
+          <a :class="open ? 'bg-yellow-400 text-black' : 'text-black'" href={link.url} class="py-2 px-4 hover:text-black hover:bg-yellow-300 rounded focus:outline-none transition-colors duration-300">
             {link.name}
             {link.dropdown && (
               <svg class="inline-block ml-2 h-4 w-4" :class="open ? 'transform rotate-180' : ''" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -67,10 +67,10 @@ const links = [
             )}
           </a>
           {link.dropdown && (
-            <div x-show="open" x-transition class="absolute left-0 mt-2 w-48 bg-red rounded-md shadow-lg">
-              <div class="py-2 bg-red rounded-md shadow-xs">
+            <div x-show="open" x-transition class="absolute left-0 mt-2 w-48 bg-yellow-300 rounded-md shadow-lg">
+              <div class="py-2 bg-yellow-300 rounded-md shadow-xs">
                 {link.dropdown.map(item => (
-                  <a href={item.url} class="block px-4 py-2 text-black hover:bg-red-700 hover:text-black hover:bg-zinc-900 rounded-md transition-colors duration-300">
+                  <a href={item.url} class="block px-4 py-2 text-black hover:bg-red-500 hover:text-white rounded-md transition-colors duration-300">
                     {item.name}
                   </a>
                 ))}
@@ -81,13 +81,13 @@ const links = [
       ))}
     </div>
     <div class="md:hidden">
-      <button @click="mobileMenuOpen = !mobileMenuOpen" class="text-white focus:outline-none">
+      <button @click="mobileMenuOpen = !mobileMenuOpen" class="text-black focus:outline-none">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
         </svg>
       </button>
     </div>
-    <div x-show="mobileMenuOpen" @click.away="mobileMenuOpen = false" class="fixed inset-0 z-40 bg-zinc-900 bg-opacity-90 flex flex-col items-center justify-center text-center text-white">
+    <div x-show="mobileMenuOpen" @click.away="mobileMenuOpen = false" class="fixed inset-0 z-40 bg-black bg-opacity-90 flex flex-col items-center justify-center text-center text-white">
       <button @click="mobileMenuOpen = false" class="absolute top-4 right-4 text-white focus:outline-none">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -95,7 +95,7 @@ const links = [
       </button>
       {links.map(link => (
         <div x-data="{ open: false }" class="w-full">
-          <div @click.prevent="open = !open" class="block py-4 text-xl text-black w-full text-center hover:bg-red-600 transition-colors duration-300">
+          <div @click.prevent="open = !open" class="block py-4 text-xl text-white w-full text-center hover:bg-yellow-400 transition-colors duration-300">
             {link.name}
             {link.dropdown && (
               <svg class="inline-block ml-2 h-4 w-4" :class="open ? 'transform rotate-180' : ''" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -104,9 +104,9 @@ const links = [
             )}
           </div>
           {link.dropdown && (
-            <div x-show="open" x-transition class="w-full bg-red-500">
+            <div x-show="open" x-transition class="w-full bg-yellow-300">
               {link.dropdown.map(item => (
-                <a href={item.url} class="block py-2 text-lg text-black hover:bg-red-700 hover:text-white transition-colors duration-300">
+                <a href={item.url} class="block py-2 text-lg text-black hover:bg-red-500 hover:text-white transition-colors duration-300">
                   {item.name}
                 </a>
               ))}
