--- a/src/components/Noticias.astro
+++ b/src/components/Noticias.astro
@@ -2,12 +2,14 @@
 import Container from "../components/Container.astro";
 import noticiasData from '../components/Data/noticias.json';
 import Topic from "./Topic.astro";
+
 ---
 
 <Container>
   <div class="relative flex flex-col items-center mt-16" id="noticias">
     <Topic title="Últimas Noticias" description="" />
   </div>
+  
   <div class="relative flex flex-col items-center mb-8" id="noticias-separator">
     <div class="flex items-center my-4 w-full">
       <div class="flex-grow border-t border-gray-300"></div>
@@ -19,15 +21,16 @@ import Topic from "./Topic.astro";
       <div class="flex-grow border-t border-gray-300"></div>
     </div>
   </div>
+  
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
     <div class="grid gap-8 lg:grid-cols-3">
       {noticiasData.map(noticia => (
-        <article class="p-6 bg-white rounded-3xl border border-gray-200 shadow-card" >
+        <article class="p-6 bg-white rounded-3xl border border-gray-200 shadow-md">
           <img src={noticia.imagen} alt={noticia.titulo} class="w-full h-40 object-cover rounded-t-lg" />
           <div class="p-4">
             <h2 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">{noticia.titulo}</h2>
             <p class="mb-2 text-sm text-gray-500">{noticia.fecha}</p>
-            <p class="mb-5 font-light text-gray-500">{noticia.descripcion}</p>
+            <p class="mb-5 font-light text-gray-600">{noticia.descripcion}</p>
             <div class="flex justify-between items-center">
               <a href={`/noticias/${noticia.id}`} class="inline-flex items-center font-medium text-red-600 hover:text-red-900">
                 Leer más
@@ -35,11 +38,13 @@ import Topic from "./Topic.astro";
                   <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path>
                 </svg>
               </a>
-              <a href={noticia.urlImg} class="text-red-600 hover:text-red-900" target="_blank" rel="noopener noreferrer">
-                <svg class="h-6 w-6 inline-block" fill="currentColor" viewBox="0 0 24 24">
-                  <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd" />
-                </svg>
-              </a>
+              {noticia.urlImg && (
+                <a href={noticia.urlImg} class="text-red-600 hover:text-red-900" target="_blank" rel="noopener noreferrer">
+                  <svg class="h-6 w-6 inline-block" fill="currentColor" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                  </svg>
+                </a>
+              )}
             </div>
           </div>
         </article>
