--- a/src/components/PortalTransparencia.astro
+++ b/src/components/PortalTransparencia.astro
@@ -7,7 +7,10 @@ import portalTransparenciaData from '../components/Data/portalTransparencia.json
   <div class="relative flex flex-col items-center mt-16">
     <h1 class="text-4xl font-bold text-gray-900 mb-6">{portalTransparenciaData.titulo}</h1>
     <h2 class="text-2xl font-semibold text-gray-700 mb-4">Marco legal</h2>
-    <p class="text-lg text-gray-600 mb-6">Ley 30512 «Ley de Institutos y Escuelas de Educación Superior y de la Carrera Pública de sus Docentes»</p>
+    <p class="text-lg text-gray-600 mb-6">
+      Ley 30512 «Ley de Institutos y Escuelas de Educación Superior y de la Carrera Pública de sus Docentes»
+    </p>
+    
     <div x-data="{ open: false }" class="w-full">
       <button @click="open = !open" class="w-full text-left text-lg text-gray-600 font-semibold p-4 bg-gray-200 rounded-lg focus:outline-none">
         Artículo 42 - Información obligatoria
@@ -44,7 +47,9 @@ import portalTransparenciaData from '../components/Data/portalTransparencia.json
             {portalTransparenciaData.anioAcademico2022.map(item => (
               <tr class="border-b border-gray-200 hover:bg-gray-100">
                 <td class="py-3 px-6 text-left">{item.title}</td>
-                <td class="py-3 px-6 text-right"><a href={item.url} class="text-red-500 hover:underline">Examinar</a></td>
+                <td class="py-3 px-6 text-right">
+                  <a href={item.url} class="text-red-500 hover:underline">Examinar</a>
+                </td>
               </tr>
             ))}
           </tbody>
