--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,8 @@ import { ViewTransitions } from 'astro:transitions';
 <!doctype html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="Instituto Pedagógico Ichuña Bélgica">
+  <meta property="og:description" content="Formación de excelencia en educación con un enfoque innovador. Prepárate para el futuro con nuestros programas académicos de vanguardia.">
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
